--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "ts-node-dev src/app.ts",
     "build": "tsc",
     "start": "node dist/app.js",
+    "db:init": "ts-node src/utils/initDb.ts",
     "seed": "ts-node src/utils/seedProducts.ts"
   },
   "keywords": [],
